--- a/PageReplacement/index.html
+++ b/PageReplacement/index.html
@@ -53,10 +53,6 @@
                 <p class="lead">
                   <a class="btn btn-success" href="#" role="button">WIKI</a>
                 </p>
-                <p>Goto to the Demo page.</p>
-                <p class="lead">
-                  <a class="btn btn-success" href="src/demo.html" role="button">DEMO</a>
-                </p>
             </div>
             <div class="row">
               <div class="col-sm-4">
@@ -64,8 +60,10 @@
                   <div class="card-header">FIFO</div>
                   <div class="card-body">
                     <h4 class="card-title">First In First Out</h4>
-                    <p class="card-text">In this algorithm, operating system keeps track of all pages in the memory in a queue, oldest page is in the front of the queue. When a page needs to be replaced page in the front of the queue is selected for removal.</p>
+                    <p class="card-text">In this algorithm, the oldest page i.e. the page that came first among other pages, is replaced.</p>
+                    <a class="btn btn-success" href="fifo.html">Start</a>
                   </div>
+                  
                 </div>
               </div>
               <div class="col-sm-4">
@@ -73,7 +71,18 @@
                   <div class="card-header">LRU</div>
                   <div class="card-body">
                     <h4 class="card-title">Least Recently Used</h4>
-                    <p class="card-text">In this algorithm page will be replaced which is least recently used.</p>
+                    <p class="card-text">In this algorithm, the page that is least recently used is replaced.</p>
+                    <a class="btn btn-success" href="lru.html">Start</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">MRU</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Most Recently Used</h4>
+                    <p class="card-text">In this algorithm, the page that is most recently used is replaced.</p>
+                    <a class="btn btn-success" href="mru.html">Start</a>
                   </div>
                 </div>
               </div>
@@ -82,7 +91,28 @@
                   <div class="card-header">Optimal</div>
                   <div class="card-body">
                     <h4 class="card-title">Optimal</h4>
-                    <p class="card-text">In this algorithm, pages are replaced which are not used for the longest duration of time in the future.</p>
+                    <p class="card-text">In this algorithm, page that will not be used for the longest period ot time is replaced.</p>
+                    <a class="btn btn-success" href="optimal.html">Start</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">LFU</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Least Frequently Used Used</h4>
+                    <p class="card-text">In this algorithm, the page which is used the least number of times will be replaced.</p>
+                    <a class="btn btn-success" href="lfu.html">Start</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">MFU</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Most Frequently Used Used</h4>
+                    <p class="card-text">In this algorithm, the page which is used the mosst number of times will be replaced.</p>
+                    <a class="btn btn-success" href="mfu.html">Start</a>
                   </div>
                 </div>
               </div>
