--- a/Index/index.html
+++ b/Index/index.html
@@ -20,8 +20,8 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#4ecdc4', '#a4bfeb', '#c5e0d8', '#91bab3' , '#f0ebd8' , '#c5e0d8','#c5e0d8'],
-				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', '5thpage', '6thpage', '7thpage' , '8thpage' ,'9thpage','10thpage'],
+				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#4ecdc4', '#a4bfeb', '#c5e0d8', '#91bab3' , '#f0ebd8'],
+				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', '5thpage', '6thpage', '7thpage' , '8thpage'],
 				menu: '#menu',
 				easingcss3: 'cubic-bezier(0.175, 0.885, 0.320, 1.275)'
 			});
@@ -37,10 +37,8 @@
 	<li data-menuanchor="4thpage"><a href="#4thpage">Secondary Storage</a></li>
 	<li data-menuanchor="5thpage"><a href="#5thpage">Process Sync</a></li>
 	<li data-menuanchor="6thpage"><a href="#6thpage">Memory</a></li>
-	<li data-menuanchor="7thpage"><a href="#7thpage">Sockets</a></li>
-	<li data-menuanchor="8thpage"><a href="#8thpage">Files</a></li>
-	<li data-menuanchor="9thpage"><a href="#9thpage">Security</a></li>
-	<li data-menuanchor="10thpage"><a href="#10thpage">Paging</a></li>
+	<li data-menuanchor="8thpage"><a href="#7thpage">Files</a></li>
+	<li data-menuanchor="10thpage"><a href="#8thpage">Paging</a></li>
 </ul>
 
 <div id="fullpage">
@@ -91,13 +89,12 @@
 				<div class="column1">
 					 <ul id="d-scheduling-style">
   					   <li><a href="../Disk/disk.html">1-Disk Scheduling</a></li>
-					   <li><a href="../Disk/lba.html">2-LBA</a></li>
 					 </ul>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="section" id="section5">
+	<div class="section" id="section4">
 		<div class="intro">
 			<div class="row">
 				<div class="column2">
@@ -115,7 +112,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="section" id="section6">
+	<div class="section" id="section5">
 		<div class="intro">
 			<div class="row">
 				<div class="column1">
@@ -130,28 +127,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="section" id="section7">
-		<div class="intro">
-			<h1><a href="../Sockets/index.html">Sockets</h1>
-			<p>A network socket is one endpoint in a communication flow between two programs running over the network. Socket programming allows processes to create logical sockets that communicate according to a predefined protocol over the network.</p>
-		</div>
-	</div>
-	<div class="section" id="section8">
+	<div class="section" id="section6">
 		<div class="intro">
 			<h1><a href="../File_System/index.html">File Management</h1>
 			<p>File system represents data from a logical view point. The different directory structures for file systems covered here are single-level, two-level and tree-structured directory.</p>
-		</div>
-	</div>
-	<div class="section" id="section9">
-		<div class="intro">
-			<h1><a href="../Login/Authentication/index.html">Time-Based OTP</h1>
-			<p>TOTP is two-factor authentication based on HMAC which combines a secret key with the current timestamp using a cryptographic hash function to generate a one-time password.</p>
-		</div>
-	</div>
-	<div class="section" id="section10">
-		<div class="intro">
-			<h1><a href="../PageReplacement/pgtable.html">Paging and Page Table</h1>
-			<p>Paging is a memory management scheme that eliminates the need for contiguous allocation of physical memory.</p>
 		</div>
 	</div>
 	<!-- <div class="section" id="section8">
