--- a/File_System/index.html
+++ b/File_System/index.html
@@ -20,10 +20,10 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Process Scheduling<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../Process Scheduling/index.html">Process Scheduling<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Disk Scheduling</a>
+                    <a class="nav-link" href="../Disk/disk.html">Disk Scheduling</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../Bankers/index.html">Banker's Algorithm</a>
@@ -32,13 +32,13 @@
                     <a class="nav-link" href="../Index/index.html#5thpage">Process Synchronization</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Semaphores</a>
+                    <a class="nav-link" href="../Index/index.html#5thpage">Semaphores</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">File Management</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="../Index/about.html">About</a>
                   </li>
                 </ul>
             </div>
