--- a/File_System/single_level_directory.html
+++ b/File_System/single_level_directory.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="../Index/index.html#firstPage">Operationg System Simulator</a>
+            <a class="navbar-brand" href="../Index/index.html#firstPage">Operating System Simulator</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" style="">
                 <span class="navbar-toggler-icon"></span>
               </button>         
@@ -28,9 +28,6 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../Index/index.html#5thpage">Process Synchronization</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../Index/index.html#5thpage">Semaphores</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../File_System/index.html">File Management</a>
