--- a/File_System/index.html
+++ b/File_System/index.html
@@ -48,7 +48,7 @@
                     <hr class="my-4">
                     <p>Some more details here</p>
                     <p class="lead">
-                      <a class="btn btn-success" href="#" role="button">Read More..</a>
+                      <a class="btn btn-success" href="https://www.geeksforgeeks.org/operating-system-structures-of-directory/" target="_blank" role="button">Read More..</a>
                     </p>
                 </div>
                 <div class="row">
