--- a/Process Scheduling/src/fcfs.html
+++ b/Process Scheduling/src/fcfs.html
@@ -7,6 +7,14 @@
         <link rel="stylesheet" type="text/css" href="../../Index/css/bootswatch.css" />
         <link rel="stylesheet" type="text/css" href="../css/index.css">
         <script type="text/javascript" src="../js/index.js"></script>
+        <style>
+        body {
+            color: black;
+        }
+        .jumbotron{
+            color: white;
+        }
+        </style>
     </head>
     <body>
             <!-- Navigation Bar -->
