--- a/Process Scheduling/src/multilevelQueue.html
+++ b/Process Scheduling/src/multilevelQueue.html
@@ -6,7 +6,15 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../js/multi.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../Index/css/bootswatch.css" />
-    <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
+		<link rel="stylesheet" type="text/css" href="../css/index.css"></link>
+		<style>
+			body {
+					color: black;
+			}
+			.jumbotron{
+					color: white;
+			}
+			</style>
 </head>
 
 <body >
