--- a/PageReplacement/optimal.html
+++ b/PageReplacement/optimal.html
@@ -3,7 +3,22 @@
         <link rel="stylesheet" type="text/css" href="../Index/css/bootswatch.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    </head>
+    </head> <style>
+        body {
+            color:black;
+            font-size:x-large;
+        }
+        .jumbotron{
+            color: white;
+        }
+        p {
+            padding: 10px;
+        }
+        button {
+            margin-top: 10px;
+        }
+
+        </style>
     <body>
         <script>
             var number_of_pages, number_of_frames;
@@ -125,8 +140,8 @@
               <a class="btn btn-success" href="#" role="button">WIKI</a>
             </p>
         </div>
-        <p>Number of Pages: <input id="input_pages" type="number" min=1></p>
-        <p>Number of Frames: <input id="input_frames" type="number" min=1> <button class="btn btn-success" onclick="getInputs()">Submit</button></p>
+        <p>Number of Pages: <input class="form-control" id="input_pages" type="number" min=1></p>
+        <p>Number of Frames: <input class="form-control" id="input_frames" type="number" min=1> <button class="btn btn-success" onclick="getInputs()">Submit</button></p>
         <div>
             <table id="pages" class="table">
                 <th id = "pageHead1"></th>
@@ -138,7 +153,7 @@
 
             </table>
         </div>
-        <p>Sequence of Page Accesses:  <input id="input_page"> <button class="btn btn-success" onclick="opr()">Add</button></p>
+        <p>Sequence of Page Accesses:  <input class="form-control" id="input_page"> <button class="btn btn-success" onclick="opr()">Add</button></p>
         <p>Number of Hits:<div id="hits"></div></p>
         <p>Number of Page Faults:<div id="faults"></div></p>
         <p id="results"><strong> Results</strong></p>
