--- a/Process Scheduling/src/sjf.html
+++ b/Process Scheduling/src/sjf.html
@@ -6,7 +6,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../../Index/css/bootswatch.css" />
     <link rel="stylesheet" type="text/css" href="../css/index.css"></link>
-    <script type="text/javascript" src="../js/index.js"></script>
+		<script type="text/javascript" src="../js/index.js"></script>
+		<style>
+			body {
+					color: black;
+			}
+			.jumbotron{
+					color: white;
+			}
+			</style>
 	
 </head>
 <body >
