--- a/Index/index.html
+++ b/Index/index.html
@@ -38,7 +38,7 @@
 	<li data-menuanchor="5thpage"><a href="#5thpage">Process Sync</a></li>
 	<li data-menuanchor="6thpage"><a href="#6thpage">Memory</a></li>
 	<li data-menuanchor="8thpage"><a href="#7thpage">Files</a></li>
-	<li data-menuanchor="10thpage"><a href="#8thpage">Paging</a></li>
+	<li data-menuanchor="10thpage"><a href="../PageReplacement/pgtable.html">Paging</a></li>
 </ul>
 
 <div id="fullpage">
