--- a/PageReplacement/pgtable.html
+++ b/PageReplacement/pgtable.html
@@ -54,7 +54,7 @@
                 <hr class="my-4">
                     <p>Some more details here</p>
                     <p class="lead">
-                      <a class="btn btn-success" href="https://docs.google.com/presentation/d/1xcAL0M9FgeertqbFYN_nitQzvmiQ2tB-FzEII20t9po/present#slide=54" role="button">Wiki</a>
+                      <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Paging" role="button">Wiki</a>
                     </p>
             </div>
             <form>
@@ -96,7 +96,83 @@
 				</div>
 			</div>
         </div>
+        <p id="resultss"></p>
         <br>
         <br>
+
+        <br>
+        <div class="container">
+            <div class="jumbotron">
+                <h1 class="display-3">Page Replacement Algorithms</h1>
+                <p class="lead">In an Operating System that uses paging for memory management , a Page Replacement algorithm is needed to decide which page should be replaced when new page comes in.</p>
+                <hr class="my-4">
+                <p>Goto to the Wiki page.</p>
+                <p class="lead">
+                  <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Page_replacement_algorithm" role="button">Read More..</a>
+                </p>
+            </div>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">FIFO</div>
+                  <div class="card-body">
+                    <h4 class="card-title">First In First Out</h4>
+                    <p class="card-text">In this algorithm, the oldest page i.e. the page that came first among other pages, is replaced.</p>
+                    <a class="btn btn-success" href="fifo.html">Start</a>
+                  </div>
+                  
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">LRU</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Least Recently Used</h4>
+                    <p class="card-text">In this algorithm, the page that is least recently used is replaced.</p>
+                    <a class="btn btn-success" href="lru.html">Start</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">MRU</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Most Recently Used</h4>
+                    <p class="card-text">In this algorithm, the page that is most recently used is replaced.</p>
+                    <a class="btn btn-success" href="mru.html">Start</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">Optimal</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Optimal</h4>
+                    <p class="card-text">In this algorithm, page that will not be used for the longest period ot time is replaced.</p>
+                    <a class="btn btn-success" href="optimal.html">Start</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">LFU</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Least Frequently Used Used</h4>
+                    <p class="card-text">In this algorithm, the page which is used the least number of times will be replaced.</p>
+                    <a class="btn btn-success" href="lfu.html">Start</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="card text-white bg-danger mb-3" style="max-width: 25rem;">
+                  <div class="card-header">MFU</div>
+                  <div class="card-body">
+                    <h4 class="card-title">Most Frequently Used Used</h4>
+                    <p class="card-text">In this algorithm, the page which is used the mosst number of times will be replaced.</p>
+                    <a class="btn btn-success" href="mfu.html">Start</a>
+                  </div>
+                </div>
+              </div>
+          </div>
     </body>
 </html>
