--- a/PageReplacement/fifo.html
+++ b/PageReplacement/fifo.html
@@ -7,7 +7,7 @@
     <style>
         body {
             color:black;
-            font-size:x-large;
+            font-size:larger;
         }
         .jumbotron{
             color: white;
@@ -106,9 +106,8 @@
                 <h1 class="display-3">First In First Out</h1>
                 <p class="lead">It is one of the simplest page replacement algorithm. The oldest page, which has spent the longest time in memory is chosen and replaced. This algorithm is implemented with the help of FIFO queue to hold the pages in memory. A page is inserted at the rear end of the queue and is replaced at the front of the queue.</p>
                 <hr class="my-4">
-                <p>Goto to the Wiki page.</p>
                 <p class="lead">
-                  <a class="btn btn-success" href="#" role="button">WIKI</a>
+                  <a class="btn btn-success" href="https://www.geeksforgeeks.org/program-page-replacement-algorithms-set-2-fifo/" role="button">Read More</a>
                 </p>
             </div>
         
