--- a/PageReplacement/index.html
+++ b/PageReplacement/index.html
@@ -9,7 +9,7 @@
     <body>
             <!-- Navigation Bar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="../Index/index.html#firstPage">Operationg System Simulator</a>
+            <a class="navbar-brand" href="../Index/index.html#firstPage">Operating System Simulator</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" style="">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -28,14 +28,12 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../Index/index.html#5thpage">Process Synchronization</a>
                   </li>
+
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Semaphores</a>
+                    <a class="nav-link" href="#">Pagingt<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">File Management</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Page Replacement<span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
