--- a/Index/index.html
+++ b/Index/index.html
@@ -9,7 +9,8 @@
 	<meta name="keywords"  content="Scheduling,Bankers,OS" />
 	<meta name="Resource-type" content="Document" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
-	<link rel="stylesheet" type="text/css" href="css/index.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+	<link rel="stylesheet" type="text/css" href="css/bootswatch.css" />
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
@@ -108,7 +109,7 @@
 					   <li><a href="../Process synchronization/dining.html">Dining Philosophers</a></li>
 					   <li><a href="../Process synchronization/producer_consumer.html">Producer Consumer</a></li>
 					   <li><a href="../Process synchronization/readerWriter.html">Reader Writer</a></li>
-					   <li><a href="../Process synchronization/sleepingBarber.html">Sleeping Barber</a></li>
+					   
 					 </ul>
 				</div>
 			</div>
