--- a/Index/index.html
+++ b/Index/index.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#4ecdc4', '#a4bfeb', '#c5e0d8', '#91bab3' , '#4BBFC3'],
+				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#4ecdc4', '#a4bfeb', '#95e0d8', '#91bab3' , '#4BBFC3'],
 				anchors: ['firstPage', 'secondPage', '3rdPage', '4thpage', '5thpage', '6thpage', '7thpage' , '8thpage'],
 				menu: '#menu',
 				easingcss3: 'cubic-bezier(0.175, 0.885, 0.320, 1.275)'
@@ -58,9 +58,9 @@
 		<li>Member 10: Avdhesh Pratap Singh Yadav(17CO210)</li>
 	</div>
 	<div class="section" id="section1">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
-				<div class="column1">
+				<div class="column1" >
 					<h1><a href="../Process Scheduling/index.html">Process Scheduling</a></h1>
 				</div>
 				<div class="column1">
@@ -76,27 +76,28 @@
 		</div>
 	</div>
 	<div class="section" id="section2">
-		<div class="intro">
-			<h1><a href="../Bankers/index.html">Banker's Algorithm</a></h1>
+		<div class="intro" style="padding:10px;margin:20px">
+			<h1><a href="../Bankers/index.html" >Banker's Algorithm</a></h1>
 			<p>Banker's Algorithm is a resource allocation and deadlock avoidance algorithm that tests for safety by simulating the allocation of predetermined maximum possible amounts of all resources, and then makes an "safe-state" check to test for possible deadlock conditions for all other pending activities, before deciding whether allocation should be allowed to continue.</p>
 		</div>
 	</div>
 	<div class="section" id="section3">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column1">
-					<h1>Secondary Storage</h1>
+					<h1><a href="../Disk/disk.html">Disk Scheduling</a></h1>
+					<p>Disk scheduling is the method that computer operating systems use to decide in which order the block I/O operations will be submitted to storage volumes. I/O scheduling is sometimes called disk scheduling.</p>
 				</div>
-				<div class="column1">
+				<!-- <div class="column1">
 					 <ul id="d-scheduling-style">
   					   <li><a href="../Disk/disk.html">1-Disk Scheduling</a></li>
 					 </ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
 	<div class="section" id="section4">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column2">
 					<h1>Process Synchronization</h1>
@@ -114,7 +115,7 @@
 		</div>
 	</div>
 	<div class="section" id="section5">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column1">
 					<h1>Memory Management</h1>
@@ -129,16 +130,16 @@
 		</div>
 	</div>
 	<div class="section" id="section6">
-		<div class="intro">
-			<h1><a href="../File_System/index.html">File Management</h1>
-			<p>File system represents data from a logical view point. The different directory structures for file systems covered here are single-level, two-level and tree-structured directory.</p>
+		<div class="intro" style="padding:10px;margin:20px">
+			<h1><a href="../File_System/index.html">File Management</a></h1>
+			<p>A file-system is a way of storing information on a computer that usually consists of a hierarchy of directories that is used to organize files.</p>
 		</div>
 	</div>
 	<div class="section" id="section7">
-		<div class="intro">
+		<div class="intro" style="padding:10px;margin:20px">
 			<div class="row">
 				<div class="column2">
-					<h1>    	Paging</h1>
+					<h1>Paging</h1>
 				</div>
 				<div class="column2">
 					 <ul id="synchronization-style">
