--- a/File_System/index.html
+++ b/File_System/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Disk Scheduling</title>
+        <title>File Management</title>
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <link rel="stylesheet" href="styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="jumbotron">
                     <h1 class="display-3">File Management</h1>
-                    <p class="lead">File system represents data from a logical viewpoint. The different directory structures considered for file systems covered here are single level directory, two-level directory and tree-structured directory</p>
+                    <p class="lead">A file-system is a way of storing information on a computer that usually consists of a hierarchy of directories that is used to organize files.</p>
                     <hr class="my-4">
                     <p>Some more details here</p>
                     <p class="lead">
