--- a/File_System/index.html
+++ b/File_System/index.html
@@ -35,6 +35,9 @@
                     <a class="nav-link" href="#">File Management</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="../Index/index.html#8thpage">Paging</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="../Index/about.html">About</a>
                   </li>
                 </ul>
