--- a/File_System/tree_directory.html
+++ b/File_System/tree_directory.html
@@ -33,6 +33,9 @@
                     <a class="nav-link" href="../File_System/index.html">File Management</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="../Index/index.html#8thpage">Paging</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="../Index/about.html">About</a>
                   </li>
                 </ul>
