--- a/Index/index.html
+++ b/Index/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords"  content="Scheduling,Bankers,OS" />
 	<meta name="Resource-type" content="Document" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
-	<!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+	<link rel="stylesheet" type="text/css" href="css/index.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootswatch.css" />
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -38,20 +38,20 @@
 	<li data-menuanchor="4thpage"><a href="#4thpage">Secondary Storage</a></li>
 	<li data-menuanchor="5thpage"><a href="#5thpage">Process Sync</a></li>
 	<li data-menuanchor="6thpage"><a href="#6thpage">Memory</a></li>
-	<li data-menuanchor="8thpage"><a href="#7thpage">Files</a></li>
-	<li data-menuanchor="10thpage"><a href="#8thpage">Paging</a></li>
+	<li data-menuanchor="7thpage"><a href="#7thpage">Files</a></li>
+	<li data-menuanchor="8thpage"><a href="#8thpage">Paging</a></li>
 </ul>
 
 <div id="fullpage">
 	<div class="section " id="section0">
 		<h1>Operating System Simulator</h1>
 		<h4>Project By: Group 6 (17CO201-210)</h4>
-		<li>Member 1: Aashay Maheshwari(17CO201)</li>
-		<li>Member 2: Abheek(17CO202)</li>
+		<li>Member 1: Aashay Maheshwarkar (17CO201)</li>
+		<li>Member 2: Abheek Babel(17CO202)</li>
 		<li>Member 3: Abhishek Ranjan(17CO203)</li>
 		<li>Member 4: Adarsh Kumar(17CO204)</li>
 		<li>Member 5: Chetan Agarwal(17CO205)</li>
-		<li>Member 6: Akash Khayath(17CO206)</li>
+		<li>Member 6: Akash Kayath(17CO206)</li>
 		<li>Member 7: Akash Sahoo(17CO207)</li>
 		<li>Member 8: Ankit Jain(17CO208)</li>
 		<li>Member 9: Arjun(17CO209)</li>
