--- a/Index/index.html
+++ b/Index/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords"  content="Scheduling,Bankers,OS" />
 	<meta name="Resource-type" content="Document" />
 	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
-	<!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+	<link rel="stylesheet" type="text/css" href="NewTemplate/web/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootswatch.css" />
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -44,7 +44,7 @@
 
 <div id="fullpage">
 	<div class="section " id="section0">
-		<h1>Operating System Simulator</h1>
+		<h1>Operating System Simxulator</h1>
 		<h4>Project By: Group 6 (17CO201-210)</h4>
 		<li>Member 1: Aashay Maheshwari(17CO201)</li>
 		<li>Member 2: Abheek(17CO202)</li>
