--- a/Index/index.html
+++ b/Index/index.html
@@ -35,7 +35,7 @@
 	<li data-menuanchor="firstPage"><a href="#firstPage">Home</a></li>
 	<li data-menuanchor="secondPage"><a href="#secondPage">Process Scheduling</a></li>
 	<li data-menuanchor="3rdPage"><a href="#3rdPage">Banker's</a></li>
-	<li data-menuanchor="4thpage"><a href="#4thpage">Secondary Storage</a></li>
+	<li data-menuanchor="4thpage"><a href="#4thpage">Disk Scheduling</a></li>
 	<li data-menuanchor="5thpage"><a href="#5thpage">Process Sync</a></li>
 	<li data-menuanchor="6thpage"><a href="#6thpage">Memory</a></li>
 	<li data-menuanchor="7thpage"><a href="#7thpage">Files</a></li>
